force-app/main/default/objects/Integration_Error__c/Integration_Error__c.object-meta.xml
<CustomObject>
    <description>INT-021 — one row per failed outbound integration callout.</description>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>IE-{0000}</displayFormat>
        <label>Integration Error #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>