force-app/main/default/objects/Integration_Error__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Short label for the integration surface (e.g. HIC_Prefill).</description>
    <label>Context</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>