force-app/main/default/objects/Integration_Error__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Id of the record this error relates to (e.g. Onboarding__c).</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>