force-app/main/default/objects/Integration_Error__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>Serialized request body sent to the external system.</description>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>