force-app/main/default/objects/Integration_Error__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Response body returned by the external system (truncated).</description>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>